fixed jwt creation exception because of invalid parameter type in claims
- also added test cases for createJWT